<resources>
    <string name="app_name">JacketCoach</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="map_fragment_label">Events around you</string>
    <string name="jacketcoach_logo_description">JacketCoach Logo</string>
    <string name="jacketcoach">JacketCoach</string>
    <string name="action_favorite">Favorite events</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="add_event">Add Event</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_signout">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="participate">Participate</string>
    <string name="opt_out">Opt-out</string>
    <string name="user_phoneNumber_key">phoneNumber</string>
    <string name="users_table_key">Users</string>
    <string name="events_table_key">events</string>
    <string name="user_playNickname_key">playNickname</string>
    <string name="user_fullName_key">fullName</string>
    <string name="user_email_key">email</string>
    <string name="events_players_key">players</string>
    <string name="event_name_label">Event name</string>
    <string name="event_sport_label">Sport</string>
    <string name="button_view_on_map_label">View on map</string>
    <string name="button_update_event_label">Update event</string>
    <string name="event_players_attending_label">Players attending</string>
    <string name="firebase_event_players_key">players</string>
    <string name="TAG_PLAYER">0</string>
    <string name="TAG_LAYOUT">1</string>
    <string name="monitoring_noPlayerRegistered">No player registered yet</string>
    <string-array name="sports_dropdown">
        <item>Basketball</item>
        <item>Volleyball</item>
        <item>Soccer</item>
        <item>Tennis</item>
        <item>Football</item>
        <item>Rugby</item>
        <item>Ultimate</item>
        <item>Handball</item>
        <item>Other</item>
    </string-array>
    <string-array name="weather_dropdown">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="view_more_eventInfo">View more</string>
    <string name="extra_eventToMonitor">EVENT_MONITORED</string>
    <string name="event_description">Event Description</string>
    <string name="event_address_label">Address</string>
</resources>